kustomize/overlay/prod/api-automation-testing-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-automation-testing-prod
  labels:
    environmentId: env_fb62f1d6-8a12-455d-9c66-bec01ac9bf33
    projectId: project_8f121846-2b4f-48a5-874e-b06f0efd6c2a
    projectName: api-automation-testing
    environmentName: prod
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
